--- a/jade/cube/cube02.jade
+++ b/jade/cube/cube02.jade
@@ -2,12 +2,12 @@ include ./../inc/_nav-list.jade
 extends ../inc/_head.jade
 
 block title
-	title Threejs cube01 Sample
+	title Threejs cube02 Sample
 
 block content
-	h1 キューブの描画
+	h1 キューブのアニメーション
 
 	mixin list(1)
 
 	script(src="../common/threejs/build/three.min.js")
-	script(src="./js/app01.js")
+	script(src="./js/app02.js")
