--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -2,6 +2,7 @@ mixin list(val)
 	- var lists = [];
 	- lists.push({link: "index", text: "HOME"});
 	- lists.push({link: "cube/cube01", text: "cube01"});
+	- lists.push({link: "cube/cube02", text: "cube02"});
 
 	ul
 		- for (var i = 0; i < lists.length; i++)
