line sample add.

--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -3,6 +3,8 @@ mixin list(val)
 	- lists.push({link: "index", text: "HOME"});
 	- lists.push({link: "cube/cube01", text: "cube01"});
 	- lists.push({link: "cube/cube02", text: "cube02"});
+	- lists.push({link: "line/line01", text: "line01"});
+	- lists.push({link: "demo/buffer-geometry", text: "DEMO: buffer-geometry"});
 
 	ul
 		- for (var i = 0; i < lists.length; i++)
