--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -5,6 +5,7 @@ mixin list(val)
 	- lists.push({link: "cube/cube02", text: "cube02"});
 	- lists.push({link: "line/line01", text: "line01"});
 	- lists.push({link: "line/line02", text: "line02"});
+	- lists.push({link: "line/line03", text: "line03"});
 	- lists.push({link: "demo/buffer-geometry", text: "DEMO: buffer-geometry"});
 
 	ul
