--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -6,6 +6,8 @@ mixin list(val)
 	- lists.push({link: "line/line01", text: "line01"});
 	- lists.push({link: "line/line02", text: "line02"});
 	- lists.push({link: "line/line03", text: "line03"});
+	- lists.push({link: "circle/circle01", text: "circle01"});
+	- lists.push({link: "circle/circle02", text: "circle02"});
 	- lists.push({link: "demo/buffer-geometry", text: "DEMO: buffer-geometry"});
 
 	ul
