--- a/jade/line/line03.jade
+++ b/jade/line/line03.jade
@@ -42,11 +42,12 @@ block content
 				 * シーンの作成
 				*/
 				scene = new THREE.Scene();
+				scene.fog = new THREE.FogExp2(0x000000, 0.003);
 
 				/*
 				 * マテリアルの作成
 				*/
-				var num = 500,
+				var num = 400,
 						geometry = new THREE.BufferGeometry(),
 						material = new THREE.LineBasicMaterial({color: 0x0000ff}),
 						positions = new Float32Array(num * 3);
