--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -8,6 +8,7 @@ mixin list(val)
 	- lists.push({link: "line/line03", text: "line03"});
 	- lists.push({link: "circle/circle01", text: "circle01"});
 	- lists.push({link: "circle/circle02", text: "circle02"});
+	- lists.push({link: "demo/circle2d-animation", text: "DEMO: circle2d-animation"});
 	- lists.push({link: "demo/buffer-geometry", text: "DEMO: buffer-geometry"});
 
 	ul
