Sample cude03 add.

--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -3,6 +3,7 @@ mixin list(val)
 	- lists.push({link: "index", text: "HOME"});
 	- lists.push({link: "cube/cube01", text: "cube01"});
 	- lists.push({link: "cube/cube02", text: "cube02"});
+	- lists.push({link: "cube/cube03", text: "cube03"});
 	- lists.push({link: "line/line01", text: "line01"});
 	- lists.push({link: "line/line02", text: "line02"});
 	- lists.push({link: "line/line03", text: "line03"});
