Helper sample add.

--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -7,8 +7,10 @@ mixin list(val)
 	- lists.push({link: "line/line01", text: "line01"});
 	- lists.push({link: "line/line02", text: "line02"});
 	- lists.push({link: "line/line03", text: "line03"});
+	- lists.push({link: "line/line04", text: "line04"});
 	- lists.push({link: "circle/circle01", text: "circle01"});
 	- lists.push({link: "circle/circle02", text: "circle02"});
+	- lists.push({link: "helper/helper01", text: "helper01"});
 	- lists.push({link: "demo/circle2d-animation", text: "DEMO: circle2d-animation"});
 	- lists.push({link: "demo/buffer-geometry", text: "DEMO: buffer-geometry"});
 
