--- a/jade/cube/cube01.jade
+++ b/jade/cube/cube01.jade
@@ -25,7 +25,8 @@ block content
 					camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
 
 			// z方向に500ずらす
-			camera.position.z = 500;
+			//- camera.position.z = 500;
+			camera.position.set(50, 50, 500);
 
 
 			/* シーンの準備
@@ -33,6 +34,13 @@ block content
 			 * ここに様々なオブジェクトを詰め込んでいく
 			*/
 			var scene = new THREE.Scene();
+
+			/*
+			 * 軸の生成
+			*/
+			var axis = new THREE.AxisHelper(1000);
+			axis.position.set(0, 0, 0);
+			scene.add(axis);
 
 
 			/* メッシュを作成
@@ -51,7 +59,7 @@ block content
 			// メッシュの作成
 			var cubeMesh = new THREE.Mesh(geometry, material);
 			cubeMesh.rotation.x = 10;
-			cubeMesh.rotation.y = 10;
+			cubeMesh.rotation.y = 45;
 
 
 			/* メッシュをシーンに追加
