--- a/jade/circle/circle01.jade
+++ b/jade/circle/circle01.jade
@@ -2,50 +2,72 @@ include ./../inc/_nav-list.jade
 extends ../inc/_head.jade
 
 block title
-	title Threejs circle01 Sample
+	title Threejs cube01 Sample
 
 block content
-	h1 円(2D)の描画
+	h1 円の描画
 
 	mixin list(1)
 
 	script(src="../common/threejs/build/three.min.js")
-	script.
-		window.addEventListener("DOMContentLoaded", function(){
-			var camera,scene,renderer;
+	script
+		:coffee
+			window.addEventListener "DOMContentLoaded", ->
+				camera = ""
+				scene = ""
+				renderer = ""
 
-			init();
+				init = ->
+					###
+					 * カメラの設定
+					###
+					width = window.innerWidth
+					height = window.innerHeight
+					fov = 45
+					aspect = width / height
+					near = 1
+					fav = 1000
 
-			function init(){
-				/*
-				 * カメラの作成
-				*/
-				var width = window.innerWidth,
-						height = window.innerHeight,
-						fov = 80,
-						aspect = width / height,
-						near = 1,
-						far = 1000
+					camera = new THREE.PerspectiveCamera fov, aspect, near, fav
+					camera.position.set 50, 50, 150
+					camera.up.set 0, 0, 1
+					camera.lookAt {x: 0, y: 0, z: 0}
 
-				camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
-				camera.position.z = 500;
 
-				/*
-				 * シーンの作成
-				*/
-				scene = new THREE.Scene();
+					###
+					 * シーンの作成
+					###
+					scene = new THREE.Scene
 
-				/*
-				 * マテリアルの作成
-				*/
-				var geometry = new THREE.CircleGeometry(200, 500),
-						material = new THREE.MeshBasicMaterial({color: 0xeeeeee}),
-						mesh = new THREE.Mesh(geometry, material);
-				scene.add(mesh);
 
-				renderer = new THREE.WebGLRenderer();
-				renderer.setSize(width, height);
-				document.body.appendChild(renderer.domElement);
-				renderer.render(scene, camera);
-			}
-		});
+					###
+					 * 軸ヘルパー
+					###
+					axis = new THREE.AxisHelper 100
+					axis.position.set 0, 0, 0
+					scene.add axis
+
+
+					###
+					 * メッシュの作成
+					###
+
+					# ジオメトリーの作成
+					geometry = new THREE.SphereGeometry 50, 30, 30, 0
+
+					# マテリアルの作成
+					material = new THREE.MeshNormalMaterial {shading: THREE.SmoothShading}
+
+					sphre = new THREE.Mesh geometry, material
+					scene.add sphre
+
+
+					###
+					 * レンダラーの作成
+					###
+					renderer = new THREE.WebGLRenderer
+					renderer.setSize width, height
+					document.body.appendChild renderer.domElement
+					renderer.render scene, camera
+
+				init()
