--- a/jade/cube/cube01.jade
+++ b/jade/cube/cube01.jade
@@ -18,7 +18,7 @@ block content
 			*/
 			var width  = window.innerWidth,
 					height = window.innerHeight,
-					fov    = 80,
+					fov    = 45,
 					aspect = width / height,
 					near   = 1,
 					far    = 1000,
@@ -26,7 +26,10 @@ block content
 
 			// z方向に500ずらす
 			//- camera.position.z = 500;
-			camera.position.set(50, 50, 500);
+			camera.position.set(50, 50, 200);
+			camera.up.set(0, 0, 1);
+			camera.lookAt({x: 0, y: 0, z: 0});
+
 
 
 			/* シーンの準備
@@ -50,16 +53,14 @@ block content
 
 			// ジオメトリーの作成
 			// THREE.CubeGeometry(横幅, 高さ, 奥行き, (横の分割数, 縦の分割数, 奥行きの分割数, 表面, sides));
-			var geometry = new THREE.CubeGeometry(200, 200,200);
+			var geometry = new THREE.CubeGeometry(50, 50, 50);
 
 			// マテリアルの作成
 			// THREE.MeshLambertMaterial({object});
-			var material = new THREE.MeshLambertMaterial({color: 0x660000});
+			var material = new THREE.MeshNormalMaterial({wireframeLinewidth: 3});
 
 			// メッシュの作成
 			var cubeMesh = new THREE.Mesh(geometry, material);
-			cubeMesh.rotation.x = 10;
-			cubeMesh.rotation.y = 45;
 
 
 			/* メッシュをシーンに追加
