--- a/jade/cube/cube02.jade
+++ b/jade/cube/cube02.jade
@@ -32,7 +32,7 @@ block content
 					camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
 
 			// z方向に500ずらす
-			camera.position.z = 500;
+			camera.position.set(50,50,500);
 
 
 			/* シーンの準備
@@ -40,6 +40,14 @@ block content
 			 * ここに様々なオブジェクトを詰め込んでいく
 			*/
 			var scene = new THREE.Scene();
+
+
+			/*
+			 * 軸の生成
+			*/
+			var axis = new THREE.AxisHelper(1000);
+			axis.position.set(0, 0, 0);
+			scene.add(axis);
 
 
 			/* メッシュを作成
