--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -10,6 +10,11 @@ mixin list(val)
 	- lists.push({link: "line/line04", text: "line04"});
 	- lists.push({link: "circle/circle01", text: "circle01"});
 	- lists.push({link: "circle/circle02", text: "circle02"});
+	- lists.push({link: "uniqe/uniqe01", text: "uniqe01"});
+	- lists.push({link: "uniqe/uniqe02", text: "uniqe02"});
+	- lists.push({link: "uniqe/uniqe03", text: "uniqe03"});
+	- lists.push({link: "other/other01", text: "other01"});
+	- lists.push({link: "other/other02", text: "other02"});
 	- lists.push({link: "helper/helper01", text: "helper01"});
 	- lists.push({link: "demo/circle2d-animation", text: "DEMO: circle2d-animation"});
 	- lists.push({link: "demo/buffer-geometry", text: "DEMO: buffer-geometry"});
