--- a/jade/other/other02.jade
+++ b/jade/other/other02.jade
@@ -2,10 +2,10 @@ include ./../inc/_nav-list.jade
 extends ../inc/_head.jade
 
 block title
-	title Threejs cube01 Sample
+	title Threejs Other Objuct Circle Sample
 
 block content
-	h1 円柱の描画
+	h1 円形オブジェクトの描画
 
 	mixin list(1)
 
@@ -13,7 +13,7 @@ block content
 	script
 		:coffee
 			window.addEventListener "DOMContentLoaded", ->
-				camera = ""
+				camemra = ""
 				scene = ""
 				renderer = ""
 
@@ -31,7 +31,7 @@ block content
 					camera = new THREE.PerspectiveCamera fov, aspect, near, fav
 					camera.position.set 50, 50, 150
 					camera.up.set 0, 0, 1
-					camera.lookAt {x: 0, y: 0, z: 0}
+					camera.lookAt {x: 0, y:0, z: 0}
 
 
 					###
@@ -44,21 +44,21 @@ block content
 					 * 軸ヘルパー
 					###
 					axis = new THREE.AxisHelper 100
-					axis.position.set 0, 0, 0
 					scene.add axis
 
 
 					###
 					 * メッシュの作成
 					###
-					#ジオメトリーの作成
-					geometry = new THREE.CylinderGeometry 40, 40, 80, 50, 50, true
 
-					#マテリアルの作成
-					material = new THREE.MeshNormalMaterial {shading: THREE.SmoothShading, side: THREE.DoubleSide}
+					# ジオメトリーの作成
+					geometry = new THREE.CircleGeometry 60, 50, Math.PI / 3, Math.PI * 4 / 3
 
-					cylinder = new THREE.Mesh geometry, material
-					scene.add cylinder
+					# マテリアルの作成
+					material = new THREE.MeshNormalMaterial {wireframe: true}
+
+					circle = new THREE.Mesh geometry, material
+					scene.add circle
 
 
 					###
@@ -70,3 +70,5 @@ block content
 					renderer.render scene, camera
 
 				init()
+
+
