--- a/jade/uniqe/uniqe01.jade
+++ b/jade/uniqe/uniqe01.jade
@@ -2,14 +2,15 @@ include ./../inc/_nav-list.jade
 extends ../inc/_head.jade
 
 block title
-	title Threejs cube01 Sample
+	title Threejs Uniqe Sample
 
 block content
-	h1 円柱の描画
+	h1 凸型オブジェクト
 
 	mixin list(1)
 
 	script(src="../common/threejs/build/three.min.js")
+	script(src="../common/lib/ConvexGeometry.js")
 	script
 		:coffee
 			window.addEventListener "DOMContentLoaded", ->
@@ -29,9 +30,9 @@ block content
 					fav = 1000
 
 					camera = new THREE.PerspectiveCamera fov, aspect, near, fav
-					camera.position.set 50, 50, 150
+					camera.position.set 50, 50, 200
 					camera.up.set 0, 0, 1
-					camera.lookAt {x: 0, y: 0, z: 0}
+					camera.lookAt {x:0 , y: 0, z: 0}
 
 
 					###
@@ -41,9 +42,9 @@ block content
 
 
 					###
-					 * 軸ヘルパー
+					 * 軸ヘルパ
 					###
-					axis = new THREE.AxisHelper 100
+					axis = new THREE.AxisHelper 300
 					axis.position.set 0, 0, 0
 					scene.add axis
 
@@ -51,14 +52,30 @@ block content
 					###
 					 * メッシュの作成
 					###
+					#オブジェクトの頂点座標
+					###
+					vertices = [
+						new THREE.Vector3 -50, -50, 0
+						new THREE.Vector3 -50, 50, 0
+						new THREE.Vector3 50, 50, 0
+						new THREE.Vector3 50, -50, 0
+						new THREE.Vector3 0, 0, 60
+					]
+					###
+					
+					#ランダム生成
+					vertices = []
+					for i in [0..5]
+						vertices[i] = new THREE.Vector3 100*Math.random()-20, 100*Math.random()-20, 100*Math.random()-20
+
 					#ジオメトリーの作成
-					geometry = new THREE.CylinderGeometry 40, 40, 80, 50, 50, true
+					geometry = new THREE.ConvexGeometry(vertices)
 
 					#マテリアルの作成
-					material = new THREE.MeshNormalMaterial {shading: THREE.SmoothShading, side: THREE.DoubleSide}
+					material = new THREE.MeshNormalMaterial
 
-					cylinder = new THREE.Mesh geometry, material
-					scene.add cylinder
+					convex = new THREE.Mesh geometry, material
+					scene.add convex
 
 
 					###
