--- a/jade/uniqe/uniqe02.jade
+++ b/jade/uniqe/uniqe02.jade
@@ -2,10 +2,10 @@ include ./../inc/_nav-list.jade
 extends ../inc/_head.jade
 
 block title
-	title Threejs cube01 Sample
+	title Threejs Uniqe Torus Sample
 
 block content
-	h1 円柱の描画
+	h1 トーラスオブジェクト
 
 	mixin list(1)
 
@@ -51,14 +51,14 @@ block content
 					###
 					 * メッシュの作成
 					###
-					#ジオメトリーの作成
-					geometry = new THREE.CylinderGeometry 40, 40, 80, 50, 50, true
+					#ジオメトリの作成
+					geometry = new THREE.TorusKnotGeometry 40, 5, 50, 50, 1, 1, 2
 
 					#マテリアルの作成
-					material = new THREE.MeshNormalMaterial {shading: THREE.SmoothShading, side: THREE.DoubleSide}
+					material = new THREE.MeshNormalMaterial {shading: THREE.SmoothShading}
 
-					cylinder = new THREE.Mesh geometry, material
-					scene.add cylinder
+					torusKnot = new THREE.Mesh geometry, material
+					scene.add torusKnot
 
 
 					###
@@ -68,5 +68,6 @@ block content
 					renderer.setSize width, height
 					document.body.appendChild renderer.domElement
 					renderer.render scene, camera
+
 
 				init()
