--- a/jade/uniqe/uniqe03.jade
+++ b/jade/uniqe/uniqe03.jade
@@ -2,10 +2,10 @@ include ./../inc/_nav-list.jade
 extends ../inc/_head.jade
 
 block title
-	title Threejs cube01 Sample
+	title Threejs Uniqe Parametric Sample
 
 block content
-	h1 円柱の描画
+	h1 2次元平面形状
 
 	mixin list(1)
 
@@ -29,7 +29,7 @@ block content
 					fav = 1000
 
 					camera = new THREE.PerspectiveCamera fov, aspect, near, fav
-					camera.position.set 50, 50, 150
+					camera.position.set 50, 50, 100
 					camera.up.set 0, 0, 1
 					camera.lookAt {x: 0, y: 0, z: 0}
 
@@ -51,14 +51,30 @@ block content
 					###
 					 * メッシュの作成
 					###
+					#画数
+					n = 8
+					#サイズ
+					size = 50
+					#シェイプオブジェクト
+					shape = new THREE.Shape
+					#パスの視点
+					shape.moveTo 0, size
+					for i in [0...n]
+						theta = 2*Math.PI / n*i
+						shape.lineTo size*Math.sin theta, size*Math.cos theta
+					
+					holePath = new THREE.Path
+					holePath.absarc 20, 20, 15, 0, Math.PI * 2, true
+					shape.holes.push holePath
+
 					#ジオメトリーの作成
-					geometry = new THREE.CylinderGeometry 40, 40, 80, 50, 50, true
+					geometry = new THREE.ShapeGeometry shape
 
 					#マテリアルの作成
-					material = new THREE.MeshNormalMaterial {shading: THREE.SmoothShading, side: THREE.DoubleSide}
+					material = new THREE.MeshNormalMaterial
 
-					cylinder = new THREE.Mesh geometry, material
-					scene.add cylinder
+					shape = new THREE.Mesh geometry, material
+					scene.add shape
 
 
 					###
@@ -69,4 +85,7 @@ block content
 					document.body.appendChild renderer.domElement
 					renderer.render scene, camera
 
+
 				init()
+
+
