phtsics sample add. & js file include

--- a/jade/demo/circle2d-animation.jade
+++ b/jade/demo/circle2d-animation.jade
@@ -9,9 +9,7 @@ block content
 
 	mixin list(1)
 
-	script(src="../common/threejs/build/three.min.js")
-	script(src="../common/lib/CanvasRenderer.js")
-	script(src="../common/lib/Projector.js")
+	include ../inc/_script-sets.jade
 	script.
 		var requestAnimationFrame = window.requestAnimationFrame ||
 																window.mozRequestAnimationFrame ||
