--- a/jade/line/line03.jade
+++ b/jade/line/line03.jade
@@ -9,7 +9,7 @@ block content
 
 	mixin list(1)
 
-	script(src="../common/threejs/build/three.min.js")
+	include ../inc/_script-sets.jade
 	script.
 		var requestAnimationFrame = window.requestAnimationFrame ||
 																window.mozRequestAnimationFrame ||
