--- a/jade/uniqe/uniqe01.jade
+++ b/jade/uniqe/uniqe01.jade
@@ -9,8 +9,7 @@ block content
 
 	mixin list(1)
 
-	script(src="../common/threejs/build/three.min.js")
-	script(src="../common/lib/ConvexGeometry.js")
+	include ../inc/_script-sets.jade
 	script
 		:coffee
 			window.addEventListener "DOMContentLoaded", ->
