--- a/jade/inc/_head.jade
+++ b/jade/inc/_head.jade
@@ -4,6 +4,15 @@ head
 	meta(charset="UTF-8")
 	block title
 		title Sample Threejs
+	link(rel="stylesheet", href="../css/marx.min.css")
+	link(rel="stylesheet", href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css")
+	link(rel="stylesheet", href="../css/style.css")
+
 
 body
-	block content
+	.menu-bg
+
+	mixin list(0)
+
+	.l-wrapper
+		block content
