--- a/jade/cube/cube03.jade
+++ b/jade/cube/cube03.jade
@@ -25,7 +25,7 @@ block content
 				@init = ->
 					console.log requestAnimationFrame
 					# param
-					@width = window.innerWidth
+					@width = document.body.clientWidth
 					@height = window.innerHeight
 
 					# func
