--- a/jade/helper/helper01.jade
+++ b/jade/helper/helper01.jade
@@ -29,7 +29,7 @@ block content
 					 * カメラを準備
 					 * THREE.PerspectiveCamera(画角, 縦横比, クリッピング手前, クリッピング奥);
 					###
-					width  = window.innerWidth
+					width  = document.body.clientWidth
 					height = window.innerHeight
 					fov    = 45
 					aspect = width / height
