--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -15,6 +15,7 @@ mixin list(val)
 	- lists.push({link: "uniqe/uniqe02", text: "uniqe02"});
 	- lists.push({link: "uniqe/uniqe03", text: "uniqe03"});
 	- lists.push({link: "physics/physics01", text: "physics01"});
+	- lists.push({link: "physics/physics02", text: "physics02"});
 	- lists.push({link: "other/other01", text: "other01"});
 	- lists.push({link: "other/other02", text: "other02"});
 	- lists.push({link: "helper/helper01", text: "helper01"});
