--- a/jade/line/line02.jade
+++ b/jade/line/line02.jade
@@ -16,7 +16,7 @@ block content
 			 * カメラの準備
 			 * THREE.PerspectiveCamera(画角, 縦横比, クリッピング手前, クリッピング奥);
 			*/
-			var width  = window.innerWidth,
+			var width  = document.body.clientWidth,
 					height = window.innerHeight,
 					fov    = 80,
 					aspect = width / height,
