--- a/jade/line/line03.jade
+++ b/jade/line/line03.jade
@@ -28,7 +28,7 @@ block content
 				 * カメラを準備
 				 * THREE.PerspectiveCamera(画角, 縦横比, クリッピング手前, クリッピング奥);
 				*/
-				var width    = window.innerWidth,
+				var width    = document.body.clientWidth,
 						height   = window.innerHeight,
 						fov      = 80,
 						aspect   = width / height,
