--- a/jade/other/other01.jade
+++ b/jade/other/other01.jade
@@ -18,7 +18,7 @@ block content
 				renderer = ""
 
 				init = ->
-					width = window.innerWidth
+					width = document.body.clientWidth
 					height = window.innerHeight
 					fov = 45
 					aspect = width / height
