--- a/demos/css/style.css
+++ b/demos/css/style.css
@@ -2,12 +2,13 @@
 /*===== color ===== */
 /*===== padding ===== */
 /*===== font ===== */
+/*===== uniqe ===== */
 .l-wrapper {
   padding: 15px;
 }
 
 .menu-bg {
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.9);
   width: 100%;
   height: 0;
   position: fixed;
@@ -32,10 +33,10 @@
 .nav .menu-icon {
   background: #512e90;
   display: block;
-  width: 30px;
+  width: 45px;
   height: 100%;
   position: absolute;
-  right: -30px;
+  right: -45px;
 }
 .nav .menu-icon:after {
   content: "";
@@ -46,7 +47,7 @@
   vertical-align: middle;
   position: absolute;
   top: 50%;
-  right: 7px;
+  right: 14px;
 }
 .nav ul {
   background: #673AB7;
@@ -55,6 +56,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  padding-top: 30px;
 }
 .nav a {
   display: block;
@@ -69,7 +71,7 @@
 }
 
 body {
-  margin-left: 30px;
+  margin-left: 45px;
 }
 
 h1 {
