--- a/jade/particle/particle01.jade
+++ b/jade/particle/particle01.jade
@@ -24,7 +24,7 @@ block content
 
 			class Webgl
 				@init = ->
-					@width = window.innerWidth
+					@width = document.body.clientWidth
 					@height = window.innerHeight
 
 					@initCamera()
@@ -151,6 +151,6 @@ block content
 					@renderer.render @scene, @camera
 
 				@resize = ->
-					@camera.aspect = window.innerWidth / window.innerHeight
+					@camera.aspect = document.body.clientWidth / window.innerHeight
 					@camera.updateProjectionMatrix()
-					@renderer.setSize window.innerWidth, window.innerHeight
+					@renderer.setSize document.body.clientWidth, window.innerHeight
