--- a/jade/physics/physics01.jade
+++ b/jade/physics/physics01.jade
@@ -9,6 +9,26 @@ block content
 
   mixin list(1)
 
+  :markdown
+    ## 使い方 Sample
+    ### 初期設定
+    #### CANNON.jsの世界を生成
+    ```
+    world = new CANNON.World();
+    ```
+
+    #### 重力の設定
+    ```
+    world.gravity.set(0,0,0);// 重力
+    world.broadphase = new CANNON.NaiveBroadphase();// 衝突している可能性のある剛体を見つける
+    world.solver.iterations = 10;// 反復計算回数
+    ```
+
+    > __剛体__  
+    > 剛体はどんな力を受けても形や体積を変えない。剛体の運動は，重心に全質量が集中した仮想的質点が行う重心運動と，重心のまわりの回転運動とに分離して論じることができる。  
+    > [コトバンク > 剛体とは](https://kotobank.jp/word/%E5%89%9B%E4%BD%93-62662)
+
+
   include ../inc/_script-sets.jade
   script.
     var world, mass, body, shape, timeStep=1/60,
@@ -17,15 +37,14 @@ block content
     initCannon();
     animate();
     function initCannon() {
-        // ワールドの設定
+        // CANNON.jsの世界を生成
         world = new CANNON.World();
 
-        // 重力の設定
-        world.gravity.set(0,0,0);
-        world.broadphase = new CANNON.NaiveBroadphase();
-        world.solver.iterations = 10;
+        world.gravity.set(0,0,0);// 重力の設定
+        world.broadphase = new CANNON.NaiveBroadphase();// 衝突している可能性のある物体を見つける
+        world.solver.iterations = 10;// 反復計算回数
 
-        // オブジェクトの生成
+        // 対象となる剛体の生成
         shape = new CANNON.Box(new CANNON.Vec3(1,1,1));
         mass = 1;
         body = new CANNON.Body({
@@ -38,7 +57,7 @@ block content
     }
     function initThree() {
         scene = new THREE.Scene();
-        camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 100 );
+        camera = new THREE.PerspectiveCamera( 75, document.body.clientWidth / window.innerHeight, 1, 100 );
         camera.position.z = 5;
         scene.add( camera );
         geometry = new THREE.BoxGeometry( 1, 1, 1 );
@@ -46,7 +65,7 @@ block content
         mesh = new THREE.Mesh( geometry, material );
         scene.add( mesh );
         renderer = new THREE.WebGLRenderer();
-        renderer.setSize( window.innerWidth, window.innerHeight );
+        renderer.setSize( document.body.clientWidth, window.innerHeight );
         document.body.appendChild( renderer.domElement );
     }
     function animate() {
