--- a/jade/uniqe/uniqe01.jade
+++ b/jade/uniqe/uniqe01.jade
@@ -21,7 +21,7 @@ block content
 					###
 					 * カメラの設定
 					###
-					width = window.innerWidth
+					width = document.body.clientWidth
 					height = window.innerHeight
 					fov = 45
 					aspect = width / height
