--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -10,6 +10,8 @@ mixin list(val)
 	- lists.push({link: "line/line04", text: "line04"});
 	- lists.push({link: "circle/circle01", text: "circle01"});
 	- lists.push({link: "circle/circle02", text: "circle02"});
+	- lists.push({link: "plane/plane01", text: "plane01"});
+	- lists.push({link: "plane/plane02", text: "plane02"});
 	- lists.push({link: "particle/particle01", text: "particle01"});
 	- lists.push({link: "uniqe/uniqe01", text: "uniqe01"});
 	- lists.push({link: "uniqe/uniqe02", text: "uniqe02"});
