All Files adjustment.

--- a/jade/inc/_script-sets.jade
+++ b/jade/inc/_script-sets.jade
@@ -1,7 +1,16 @@
-script(src="../src/three.min.js")
-script(src="../src/ConvexGeometry.js")
-script(src="../src/CanvasRenderer.js")
-script(src="../src/Projector.js")
-script(src="../src/cannon.min.js")
-script(src="../src/jquery.min.js")
-script(src="../src/common.js")
+if path == "root"
+	script(src="./src/three.min.js")
+	script(src="./src/ConvexGeometry.js")
+	script(src="./src/CanvasRenderer.js")
+	script(src="./src/Projector.js")
+	script(src="./src/cannon.min.js")
+	script(src="./src/jquery.min.js")
+	script(src="./src/common.js")
+else
+	script(src="../src/three.min.js")
+	script(src="../src/ConvexGeometry.js")
+	script(src="../src/CanvasRenderer.js")
+	script(src="../src/Projector.js")
+	script(src="../src/cannon.min.js")
+	script(src="../src/jquery.min.js")
+	script(src="../src/common.js")
