--- a/jade/cube/cube01.jade
+++ b/jade/cube/cube01.jade
@@ -9,6 +9,8 @@ block content
 
 	mixin list(1)
 
+	div#canvas
+
 	include ../inc/_script-sets.jade
 	script.
 		window.addEventListener("DOMContentLoaded", function(){
@@ -30,8 +32,6 @@ block content
 			camera.up.set(0, 0, 1);
 			camera.lookAt({x: 0, y: 0, z: 0});
 
-
-
 			/* シーンの準備
 			 * シーンは空間
 			 * ここに様々なオブジェクトを詰め込んでいく
@@ -45,12 +45,10 @@ block content
 			axis.position.set(0, 0, 0);
 			scene.add(axis);
 
-
 			/* メッシュを作成
 			 * メッシュはポリゴンの集合で作られたオブジェクト
 			 * メッシュはジオメトリー(座標)とマテリアル(素材)で構成される
 			*/
-
 			// ジオメトリーの作成
 			// THREE.CubeGeometry(横幅, 高さ, 奥行き, (横の分割数, 縦の分割数, 奥行きの分割数, 表面, sides));
 			var geometry = new THREE.CubeGeometry(50, 50, 50);
@@ -62,29 +60,10 @@ block content
 			// メッシュの作成
 			var cubeMesh = new THREE.Mesh(geometry, material);
 
-
 			/* メッシュをシーンに追加
 			 * 作成したメッシュをシーンに追加するには、シーン.add(メッシュ)を使う
 			*/
 			scene.add(cubeMesh);
-
-
-			/* 光源の作成
-			 * 環境光		THREE.AmbientLight
-			 * 平行光源 (無限遠光源)	THREE.DirectionalLight
-			 * 点光源		THREE.PointLight
-			 * スポットライト	THREE.SpotLight
-			*/
-			var directionalLight = new THREE.DirectionalLight(0xffffff, 3);
-			directionalLight.position.z = 3;
-
-
-			/*
-			 * 光源をシーンに追加
-			 * メッシュの時と同様に、シーン.add(光源)で追加する
-			*/
-			scene.add(directionalLight);
-
 
 			/* レンダラーを用意
 			 * 実際に描画を行うための処理
@@ -96,7 +75,8 @@ block content
 			renderer.setSize( width, height);
 
 			// DOMにcanvasを追加
-			document.body.appendChild( renderer.domElement );
+			var canvas = document.getElementById("canvas");
+			canvas.appendChild( renderer.domElement );
 
 
 			/* レンダリング
