--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,5 +1,60 @@
 include ./inc/_nav-list.jade
 extends ./inc/_head.jade
 
+block title
+	title Threejs cube01 Sample
+
+block css
+	link(rel="stylesheet", href="./css/marx.min.css")
+	link(rel="stylesheet", href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css")
+	link(rel="stylesheet", href="./css/style.css")
+
 block content
 	h1 Threejs
+
+	mixin list(0)
+	
+	:markdown
+		## 基本的な使い方
+
+		### 読み込み後に実行
+		```
+		window.addEventListener("DOMContentLoaded", function(){
+			処理
+		});
+		```
+
+		---
+
+		### カメラの設定
+		```
+		/* カメラを用意
+		 * THREE.PerspectiveCamera(画角, 縦横比, クリッピング手前, クリッピング奥);
+		 * クリッピング手前からクリッピング奥までが描画される
+		*/
+		var width  = document.body.clientWidth,
+				height = window.innerHeight,
+				fov    = 45,
+				aspect = width / height,
+				near   = 1,
+				far    = 1000,
+				camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
+
+		camera.position.set(50, 50, 200);// カメラの位置座標
+		camera.up.set(0, 0, 1);// カメラの上方向の設定
+		camera.lookAt({x: 0, y: 0, z: 0});// カメラの視野の中心
+		```
+
+		#### THREE.PerspectiveCamera(画角, 縦横比, クリッピング手前, クリッピング奥);
+		[docs - PerspectiveCamera](http://threejs.org/docs/#Reference/Cameras/PerspectiveCamera)  
+
+		| カメラ | 意味 |
+		|:-----------|:------------|
+		| camera.position | カメラの位置座標 |
+		| camera.up | カメラの上方向の設定 |
+		| camera.lookAt | カメラの視野の中心 |
+
+
+
+	- var path = "root"
+	include ./inc/_script-sets.jade
