Plane04 Sample add.

--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -13,6 +13,7 @@ mixin list(val)
 	- lists.push({link: "plane/plane01", text: "plane01"});
 	- lists.push({link: "plane/plane02", text: "plane02"});
 	- lists.push({link: "plane/plane03", text: "plane03"});
+	- lists.push({link: "plane/plane04", text: "plane04"});
 	- lists.push({link: "particle/particle01", text: "particle01"});
 	- lists.push({link: "uniqe/uniqe01", text: "uniqe01"});
 	- lists.push({link: "uniqe/uniqe02", text: "uniqe02"});
