--- a/demos/css/style.css
+++ b/demos/css/style.css
@@ -8,12 +8,11 @@
 }
 
 .menu-bg {
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.7);
   width: 100%;
   height: 0;
   position: fixed;
-  -webkit-transition: 0.5s;
-          transition: 0.5s;
+  transition: 0.5s;
 }
 .menu-bg.is-active {
   height: 100%;
@@ -24,8 +23,7 @@
   position: fixed;
   top: 0;
   left: -220px;
-  -webkit-transition: all 0.3s ease 0.3s;
-          transition: all 0.3s ease 0.3s;
+  transition: all 0.3s ease 0.3s;
 }
 .nav.is-active {
   left: 0;
@@ -62,8 +60,7 @@
   display: block;
   color: rgba(255, 255, 255, 0.5);
   padding: 7px 15px;
-  -webkit-transition: 0.2s;
-          transition: 0.2s;
+  transition: 0.2s;
 }
 .nav a:hover {
   background: #512e90;
@@ -76,4 +73,8 @@ body {
 
 h1 {
   margin-top: 0;
+}
+
+hr {
+  margin: 45px 0;
 }
