--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -4,6 +4,7 @@ mixin list(val)
 	- lists.push({link: "cube/cube01", text: "cube01"});
 	- lists.push({link: "cube/cube02", text: "cube02"});
 	- lists.push({link: "cube/cube03", text: "cube03"});
+	- lists.push({link: "cube/cube04", text: "cube04"});
 	- lists.push({link: "line/line01", text: "line01"});
 	- lists.push({link: "line/line02", text: "line02"});
 	- lists.push({link: "line/line03", text: "line03"});
@@ -14,6 +15,8 @@ mixin list(val)
 	- lists.push({link: "plane/plane02", text: "plane02"});
 	- lists.push({link: "plane/plane03", text: "plane03"});
 	- lists.push({link: "plane/plane04", text: "plane04"});
+	- lists.push({link: "plane/plane04_2", text: "plane04_2"});
+	- lists.push({link: "plane/plane04_3", text: "plane04_3"});
 	- lists.push({link: "particle/particle01", text: "particle01"});
 	- lists.push({link: "uniqe/uniqe01", text: "uniqe01"});
 	- lists.push({link: "uniqe/uniqe02", text: "uniqe02"});
