--- a/jade/cube/cube03.jade
+++ b/jade/cube/cube03.jade
@@ -2,104 +2,96 @@ include ./../inc/_nav-list.jade
 extends ../inc/_head.jade
 
 block title
-	title Threejs cube01 Sample
+	title Threejs cube04 Sample
 
 block content
 	h1 キューブを複数描画
 
 	mixin list(1)
 
+	div#canvas
+
 	include ../inc/_script-sets.jade
-	script
-		:coffee
-			requestAnimationFrame = window.requestAnimationFrame ||
-															window.mozRequestAnimationFrame ||
-															window.webkitRequestAnimationFrame ||
-															window.msRequestAnimationFrame
-			window.requestAnimationFrame = requestAnimationFrame
+	script.
+		requestAnimationFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
+		window.requestAnimationFrame = requestAnimationFrame;
 
-			window.addEventListener "DOMContentLoaded", ->
-				Webgl.init()
+		window.addEventListener("DOMContentLoaded", function() {
+			var camera,scene,renderer,spotLight;
 
-			class Webgl
-				@init = ->
-					console.log requestAnimationFrame
-					# param
-					@width = document.body.clientWidth
-					@height = window.innerHeight
+			init();
+			animation();
 
-					# func
-					@initCamera()
-					@createScene()
-					@helper()
-					@initMaterial()
-					@renderFuc()
-				
-				###
-				 * カメラの設定
-				###
-				@initCamera = ->
-					fov = 45
-					aspect = @width / @height
-					near = 1
-					fav = 1000
+			function init(){
+				var canvas = document.getElementById("canvas");
 
-					@camera = new THREE.PerspectiveCamera fov, aspect, near, fav
-					@camera.position.set 50, 50, 150
-					@camera.up.set 0, 0, 1
-					@camera.lookAt {x: 0, y: 0, z: 0}
+				/*
+					 * カメラの設定
+				 */
+				var width = canvas.clientWidth,
+						height = window.innerHeight,
+						fov = 45,
+						aspect = width / height;
+						near = 1;
+						fav = 1000;
 
-				###
+				camera = new THREE.PerspectiveCamera(fov, aspect, near, fav);
+				camera.position.set(0, 0, 150);
+				camera.lookAt({x: 0,y: 0,z: 0});
+
+				/*
 				 * シーンの作成
-				###
-				@createScene = ->
-					@scene = new THREE.Scene
+				*/
+				scene = new THREE.Scene;
+				//- group = new THREE.Group;
 
-					#グループの追加
-					@group = new THREE.Group
-					@scene.add @group
+				spotLight = new THREE.SpotLight( 0xffffff, 3 );
+				spotLight.position.set( 0, 0, 80 );
 
-				###
-				 * 軸ヘルパー
-				###
-				@helper = ->
-					axis = new THREE.AxisHelper 100
-					axis.position.set 0, 0, 0
-					@group.add axis
+				spotLight.castShadow = true;
 
-				###
+				//- spotLight.shadowMapWidth = width;
+				//- spotLight.shadowMapHeight = height;
+
+				//- spotLight.shadowCameraNear = 500;
+				//- spotLight.shadowCameraFar = 4000;
+				//- spotLight.shadowCameraFov = 30;
+
+				scene.add(spotLight);
+
+				/*
 				 * メッシュの作成
-				###
-				@initMaterial = ->
-					num = 100
-					span = 60
-					for i in [0...num]
-						# ジオメトリーの作成
-						boxsize = Math.random() * 10
-						geometry = new THREE.CubeGeometry boxsize, boxsize, boxsize
+				*/
+				var boxsize, geometry, material, cube, i, material, num, span;
+				num = 1000;
+				span = 60;
+				for (i = 0;i < num;i++) {
+					boxsize = Math.random() * 3;
+					geometry = new THREE.BoxGeometry(boxsize, boxsize, boxsize);
+					material = new THREE.MeshLambertMaterial({color: 0x660000});
+					cube = new THREE.Mesh(geometry, material);
+					cube.position.x = Math.random() * span - span / 2;
+					cube.position.y = Math.random() * span - span / 2;
+					cube.position.z = Math.random() * span - span / 2;
+					scene.add(cube);
+				}
 
-						# マテリアルの作成
-						material = new THREE.MeshNormalMaterial
-
-						@cube = new THREE.Mesh geometry, material
-						# 正座標に発生させ、原点に半分戻す
-						@cube.position.x = Math.random() * span - span/2
-						@cube.position.y = Math.random() * span - span/2
-						@cube.position.z = Math.random() * span - span/2
-						@group.add @cube
-
-				###
+				/*
 				 * レンダラーの作成
-				###
-				@renderFuc = ->
-					@renderer = new THREE.WebGLRenderer
-					@renderer.setSize @width, @height
-					document.body.appendChild @renderer.domElement
-					@renderer.render @scene, @camera
-					@animation()
+				*/
+				renderer = new THREE.WebGLRenderer;
+				renderer.setSize(width, height);
+				canvas.appendChild(renderer.domElement);
+				renderer.render(scene, camera);
+			}
 
-				@animation = ->
-					@camera.rotation.z += 0.002;
-					@renderer.render @scene, @camera
-					requestAnimationFrame @animation.bind @
+			function animation(){
+				requestAnimationFrame(animation);
+				camera.rotation.z += 0.002;
+				renderer.render(scene, camera);
+			}
+		});
+
+	:markdown
+		### 実装
 
