--- a/jade/plane/plane04.jade
+++ b/jade/plane/plane04.jade
@@ -5,7 +5,7 @@ block title
 	title Threejs Plane Sample04
 
 block content
-	h1 地面を凸凹にする
+	h1 ゆらゆらさせる
 	
 	mixin list(1)
 
@@ -24,24 +24,22 @@ block content
 			var camera,scene,geometry,material,mesh,renderer,texture;
 			var canvas = document.getElementById("canvas"),
 					width = canvas.clientWidth, height = window.innerHeight,
-					texture;
+					startData = new Date();
 
 			init();
 			animation();
 
 			function init(){
 				scene = new THREE.Scene();
-				scene.fog = new THREE.FogExp2(0xABABAB, 0.008);
 
 				camera = new THREE.PerspectiveCamera(45, width/height, 1, 1000);
-				camera.position.set(0, 10, 100);
+				camera.position.set(0, 10, 200);
 				camera.lookAt(new THREE.Vector3(0, 0, 0));
 
-				texture = THREE.ImageUtils.loadTexture("plane02.png", {}, function(){ renderer.render(scene, camera); });
-				geometry = new THREE.PlaneGeometry(200, 200, 64, 64);
+				texture = THREE.ImageUtils.loadTexture("plane02.png");
+				geometry = new THREE.PlaneGeometry(100, 100, 64, 64);
 				material = new THREE.MeshBasicMaterial({ map: texture });
 				mesh = new THREE.Mesh(geometry, material);
-				mesh.rotation.x = Math.PI / -2;
 				scene.add(mesh);
 
 				renderer = new THREE.WebGLRenderer();
@@ -51,16 +49,13 @@ block content
 			}
 
 			function animation(){
-				//- requestAnimationFrame(animation);
-				var timer = Date.now();
-				//- console.log(Math.sin(timer / 100));
-				//- console.log(mesh.geometry.vertices[2].z);
-				for(var i = 0;i < mesh.geometry.vertices.length;i++){
-					mesh.geometry.vertices[i].z = 50 * Math.sin(timer / 100 * Math.PI / 360);
-				}
-				mesh.geometry.verticesNeedUpdate = true;
-				//- console.log(mesh.geometry);
+				requestAnimationFrame(animation);
 
+				var time = (new Date() - startData)/1000;
+				mesh.geometry.verticesNeedUpdate = true;
+				for (var i=0;i<mesh.geometry.vertices.length;i++) {
+					vertex = mesh.geometry.vertices[i].z = 2 * Math.sin( -i/2 + time*10 );
+				}
 				renderer.render(scene, camera);
 			}
 		});
@@ -68,123 +63,92 @@ block content
 
 	:markdown
 		### メッシュ
-		#### 地面の作成
-		##### PlaneGeometry(width, height, widthSegments, heightSegments);
-		(docs - PlaneGeometry)[http://threejs.org/docs/#Reference/Extras.Geometries/PlaneGeometry]  
-
-		#### 画像の読み込み
-		##### Texture( image, mapping, wrapS, wrapT, magFilter, minFilter, format, type, anisotropy )
-		(docs - Texture)[http://threejs.org/docs/#Reference/Textures/Texture]  
-
 		```
-		// ジオメトリーの作成
-		var geometry,map1,material,mesh;
-		geometry = new THREE.PlaneGeometry(200, 200, 64, 64);
-
-		// 画像を読み込み 画像が読み込まれる前に描画されている？ため上手く読み込めない。renderer.render()を走らせる
-		map1 = THREE.ImageUtils.loadTexture("plane02.png", {}, function() {renderer.render(scene, camera);});
-		material = new THREE.MeshBasicMaterial({map: map1});// マテリアルの作成
-		mesh = new THREE.Mesh(geometry, material);
-		mesh.rotation.x = Math.PI / -2;// x軸を90度回転
-		scene.add(mesh);
+		texture = THREE.ImageUtils.loadTexture("plane02.png");// 画像の読み込み読み込み
+		geometry = new THREE.PlaneGeometry(100, 100, 64, 64);// ジオメトリー
+		material = new THREE.MeshBasicMaterial({ map: texture });// マテリアル
+		mesh = new THREE.Mesh(geometry, material);// メッシュ
+		scene.add(mesh);// シーンに追加
 		```
 
-		#### 地面のz方向の値を変更し凸凹にする
-		```
-		// ジオメトリの頂点分ループし、z方向の値を変更する
-		for(var i = 0;i < geometry.vertices.length;i++){
-			geometry.vertices[i].z = Math.random() * 5 - 5;
-		}
-		```
+		> THREE.ImageUtils  
+		> [docs - ImageUtils](http://threejs.org/docs/#Reference/Extras/ImageUtils)
 
-		---
-
-		### 遠くをぼかす
-		##### FogExp2( hex, density)
-		[docs - FogExp2](http://threejs.org/docs/#Reference/Scenes/FogExp2)  
-
-		```
-		scene.fog = new THREE.FogExp2( 0xABABAB, 0.008 );// ぼかす
-		```
+		> THREE.PlaneGeometry(width, height, widthSegments, heightSegments)  
+		> [docs - PlaneGeometry](http://threejs.org/docs/#Reference/Extras.Geometries/PlaneGeometry)
 
 		---
 
 		### アニメーション
 		```
+		var startData = new Date();
 		animation();
 		function animation(){
 			requestAnimationFrame(animation);
-			var timer = Date.now();
-			camera.position.x = 50 * Math.sin( timer / 100 * Math.PI / 360 );
-			camera.position.z = 50 * Math.cos( timer / 100 * Math.PI / 360 );
-			camera.lookAt( scene.position );
+
+			var time = (new Date() - startData)/1000;// 時間の差分1000分の1を取得
+			mesh.geometry.verticesNeedUpdate = true;// 値の更新をtrueに
+
+			// 頂点分ループし、z軸の値を更新
+			for (var i=0;i<mesh.geometry.vertices.length;i++) {
+				vertex = mesh.geometry.vertices[i].z = 2 * Math.sin( -i/2 + time*10 );
+			}
 			renderer.render(scene, camera);
 		}
 		```
+
+		#### 頂点値の更新
+		頂点数分ループし、z軸の値を更新している。  
+		頂点の更新は`Geometry.verticesNeedUpdate`を使い設定しなくてはならない。
+
+		> [docs - Geometry](http://threejs.org/docs/#Reference/Core/Geometry)
 
 		---
 
 		### All Codes
 		```
 		window.addEventListener("DOMContentLoaded", function(){
-			var scene,camera,geometry,texture,material,mesh,renderer;
+			var requestAnimationFrame = window.requestAnimationFrame ||
+																	window.mozRequestAnimationFrame ||
+																	window.webkitRequestAnimationFrame ||
+																	window.msRequestAnimationFrame;
+			window.requestAnimationFrame = requestAnimationFrame;
+
+			var camera,scene,geometry,material,mesh,renderer,texture;
+			var canvas = document.getElementById("canvas"),
+					width = canvas.clientWidth, height = window.innerHeight,
+					startData = new Date();
 
 			init();
 			animation();
 
 			function init(){
-				var canvas = document.getElementById("canvas");
-				var width = canvas.clientWidth, height = window.innerHeight;
-
-				/*
-				 * シーンの作成
-				*/
 				scene = new THREE.Scene();
-				scene.fog = new THREE.FogExp2(0xABABAB, 0.008);
 
-				/*
-				 * カメラの設定
-				*/
 				camera = new THREE.PerspectiveCamera(45, width/height, 1, 1000);
-				camera.position.set(0, 10, 100);
-				camera.lookAt(new THREE.Vector3(0,0,0));
+				camera.position.set(0, 10, 200);
+				camera.lookAt(new THREE.Vector3(0, 0, 0));
 
-				/*
-				 * メッシュの作成
-				*/
-				// ジオメトリーの作成
-				geometry = new THREE.PlaneGeometry(200, 200, 16, 16);
-
-				// ジオメトリの頂点分ループし、z方向の値を変更する
-				for(var i = 0;i < geometry.vertices.length;i++){
-					geometry.vertices[i].z = Math.random() * 5 - 5;
-				}
-
-				// 画像の読み込み
-				texture = THREE.ImageUtils.loadTexture("plane02.png", {}, function(){renderer.render(scene, camera);});
-
-				// マテリアルの作成
-				material = new THREE.MeshBasicMaterial({map: texture});
+				texture = THREE.ImageUtils.loadTexture("plane02.png");
+				geometry = new THREE.PlaneGeometry(100, 100, 64, 64);
+				material = new THREE.MeshBasicMaterial({ map: texture });
 				mesh = new THREE.Mesh(geometry, material);
-				mesh.rotation.x = Math.PI / -2;
 				scene.add(mesh);
 
-				/*
-				 * レンダラーの作成
-				*/
 				renderer = new THREE.WebGLRenderer();
 				renderer.setSize(width, height);
 				renderer.setClearColor(0xABABAB);
 				canvas.appendChild(renderer.domElement);
-				renderer.render(scene, camera);
 			}
 
 			function animation(){
 				requestAnimationFrame(animation);
-				var timer = Date.now();
-				camera.position.x = 50 * Math.sin( timer / 100 * Math.PI / 360 );
-				camera.position.z = 50 * Math.cos( timer / 100 * Math.PI / 360 );
-				camera.lookAt( scene.position );
+
+				var time = (new Date() - startData)/1000;
+				mesh.geometry.verticesNeedUpdate = true;
+				for (var i=0;i<mesh.geometry.vertices.length;i++) {
+					vertex = mesh.geometry.vertices[i].z = 2 * Math.sin( -i/2 + time*10 );
+				}
 				renderer.render(scene, camera);
 			}
 		});
