--- a/jade/inc/_script-sets.jade
+++ b/jade/inc/_script-sets.jade
@@ -3,6 +3,8 @@ if path == "root"
 	script(src="./src/ConvexGeometry.js")
 	script(src="./src/CanvasRenderer.js")
 	script(src="./src/Projector.js")
+	script(src="./src/TrackballControls.js")
+	script(src="./src/OrbitControls.js")
 	script(src="./src/cannon.min.js")
 	script(src="./src/jquery.min.js")
 	script(src="./src/common.js")
@@ -12,5 +14,7 @@ else
 	script(src="../src/CanvasRenderer.js")
 	script(src="../src/Projector.js")
 	script(src="../src/cannon.min.js")
+	script(src="../src/TrackballControls.js")
+	script(src="../src/OrbitControls.js")
 	script(src="../src/jquery.min.js")
 	script(src="../src/common.js")
